Page MenuHome GnuPG

2.3-only: Don't fallback to PC/SC on failure by the internal CCID driver, only use PC/SC when --disable-ccid is specified
Closed, ResolvedPublic

Description

scdaemon is kind enough to fallback to PC/SC driver when the internal CCID driver is failed.
This is not that helpful, but invites confusion.

Once, PC/SC driver is loaded, the internal CCID driver cannot access readers/tokens, because PC/SC service grabs the access.

In 2.3, it's good to remove the fallback mechanism.

Revisions and Commits

Event Timeline

gniibe changed the task status from Open to Testing.Mar 12 2020, 6:31 AM
gniibe added a project: Restricted Project.
gniibe raised the priority of this task from Normal to High.Apr 15 2021, 7:20 AM

Making this task up to HIGH priority, so that people can easily find this change in 2.3.0.

For users who want to use PC/SC (on POSIX compatible OS, like GNU), now you need to have a single line in .gnupg/scdaemon.conf:

disable-ccid